2007-05-10  David Wetzel <dave@turbocat.de> 
  * GSWeb.framework/GSWPopUpButton.m
  fixed "if" statement

2007-04-13  David Wetzel <dave@turbocat.de>
  * Merged files from my branch to head. Changes include:
  * Nearly all Dynamic Elements rewritten
  * More use of inheritance there
  * Less logging
  * Direct connect enables developers to access applications without web servers.

  * Hello demo application:
    fix double text field, update documentation, allow compilation with TCSDB

2006-12-12  David Ayers  <ayers@fsfe.org>

	* GSWeb.framework/GSWApplication.m (GSWApplicationMainReal):
	Remove dependency on GNUSTEP_SYSTEM_ROOT and search all domains
	in precedence for frameworks to load.

	* Doc/howto.gsdoc: Replace reference to GNUSTEP_SYSTEM_ROOT with
	new installation location.  Also remove refernece to obsolete debug extension.
	
2007-02-18  Nicola Pero <nicola.pero@meta-innovation.com>

	* configure.ac: Check for GNUSTEP_MAKEFILES, not GNUSTEP_SYSTEM_ROOT.
	* configure: Regenerated.
	* Makefile.postamble (config.mak): New rule.
	
2006-12-19  David Wetzel <dave@turbocat.de>

        * GSWAdaptors/common/GSWLoadBalancing.c: small cosmetic changes in spacing

        Changed logging to include the file name and line number.
        A logfile with "[debug] ../common/GSWUtil.c(165)" does not make much sense :-) 

        * GSWAdaptors/Apache/mod_gsweb.c
        * GSWAdaptors/common/GSWUtil.c
        * GSWAdaptors/common/GSWLoadBalancing.c
        * GSWAdaptors/common/GSWUtil.h
        * GSWAdaptors/common/GSWDict.c
        * GSWAdaptors/common/GSWHTTPRequest.c
        * GSWAdaptors/common/GSWStats.c
        * GSWAdaptors/common/GSWHTTPResponse.c
        * GSWAdaptors/common/GSWURLUtil.c
        * GSWAdaptors/common/GSWApp.c
        * GSWAdaptors/common/GSWAppRequest.c
        * GSWAdaptors/common/GSWAppConnectSocket.c
        * GSWAdaptors/common/GSWConfig.c

2006-12-12  David Ayers  <ayers@fsfe.org>
