@@ -1,3 +1,7 @@
+2007-05-15  David Wetzel <dave@turbocat.de>
+  * GSWAdaptors/Apache2
+  made Application name clickable on status page
+
 2007-05-10  David Wetzel <dave@turbocat.de> 
   * GSWeb.framework/GSWPopUpButton.m
   fixed "if" statement
